[package]
name = "grnenv-rs"
version = "0.1.2"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
description = "grnenv is a tool to switch using multiple Groonga versions."
repository = "https://github.com/cosmo0920/grnenv-rs"
license = "MIT"

[lib]
name = "grnenvlib"
path = "src/lib.rs"

[dependencies]
tempdir = "~0.3"
hyper = "~0.9.10"
zip = "~0.1"
clap = "~2.14"
libc = "~0.2.15"
env_proxy = "~0.1"
toml = "~0.3"
serde = "~0.9.0"
serde_derive = "~0.9.0"
num_cpus = "~1.0"
tar = "~0.4"
flate2 = "~0.2"

[dependencies.kuchiki]
version = "~0.3.4"
features = ["hyper"]

[target.'cfg(windows)'.dependencies]
kernel32-sys = "~0.2"
