[package]
name = "grnenv-rs"
version = "0.2.0"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
description = "grnenv is a tool to switch using multiple Groonga versions."
repository = "https://github.com/cosmo0920/grnenv-rs"
license = "MIT"

[lib]
name = "grnenvlib"
path = "src/lib.rs"

[dependencies]
tempdir = "~0.3"
hyper = "~0.10.5"
zip = "~0.4"
clap = "~2.32"
libc = "~0.2.42"
env_proxy = "~0.1"
toml = "~0.4"
serde = "~1.0.0"
serde_derive = "~1.0.0"
num_cpus = "~1.0"
tar = "~0.4"
flate2 = "~1.0"

[dependencies.kuchiki]
version = "~0.4.1"
features = ["hyper"]

[target.'cfg(windows)'.dependencies]
kernel32-sys = "~0.2"
